--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,3 +19,28 @@ jobs:
         with:
           name: lama_jar
           path: build/libs/lama.jar
+          retention-days: 5
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: lama_jar
+
+      - name: set up gcloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Use gcloud CLI
+        run: gcloud info
+
+      - name: List artifcat files
+        run: ls -la
