--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,15 +5,17 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+        -
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
+
       - name: gradle build
         run: ./gradlew build
+
       - name: upload atifact
         uses: actions/upload-artifact@v2
         with:
@@ -24,7 +26,6 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
@@ -40,8 +41,8 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Use gcloud CLI
-        run: gcloud info
+      - name: upload jar to gcloud server
+        run: gcloud compute scp --zone us-central1-a lama.jar instance-1:/home/xap4o/lama-be/lama.jar
 
-      - name: List artifcat files
-        run: ls -la
+      - name: restart service
+        run: gcloud compute ssh --zone us-central1-a instance-1 -- 'sudo systemctl restart lama_be.service'
